# Byt34v2.0

./: .gitignore  ByteAV.cpp  ByteAV.h  CMakeLists.txt  CMakeSettings.json  README.md  byteav_yara_util.cpp  file-scan.cpp  main.cpp  monitor.cpp  monitor.h
rules/: ByteAV_rules.yar
